Changed OSX Speech to be synchronized again. Followed the pattern used in ProcessSpeech.