@@ -13,9 +13,16 @@
  */
 package raptor.speech;
 
+import java.util.Queue;
+import java.util.concurrent.ConcurrentLinkedQueue;
+
+import org.apache.commons.lang.StringUtils;
+
+import raptor.Raptor;
 import raptor.service.ThreadService;
 
 public class OSXSpeech implements Speech {
+	protected Queue<String> speakQueue = new ConcurrentLinkedQueue<String>();
 
 	public static void main(String args[]) {
 		OSXSpeech speech = new OSXSpeech();
@@ -33,15 +40,20 @@ public class OSXSpeech implements Speech {
 	}
 
 	public void speak(final String text) {
+		if (StringUtils.isBlank(text))
+			return;
+
+		speakQueue.add(text);
 		ThreadService.getInstance().run(new Runnable() {
 			public void run() {
+				synchronized (OSXSpeech.this) {
 					try {
-						Process process = Runtime.getRuntime().exec(
-								new String[] { "say", text });
+						Process process = Runtime.getRuntime().exec(new String[] { "say", speakQueue.poll() });
 						process.waitFor();
 					} catch (Exception e) {
-						e.printStackTrace();
+						Raptor.getInstance().onError("Error occured speaking text: " + text, e);
 					}
+				}
 			}
 		});
 	}
